--- a/app/i18n/cn.json
+++ b/app/i18n/cn.json
@@ -62,6 +62,23 @@
   "MODULES_BATCH_FORCED_CONVERSION":"强制转换数量",
   "MODULES_BATCH_BUSINESS_UNIT":"业务单位",
 
+  "MODULES_BATCH_BATCH_CODE":"批次号",
+  "MODULES_BATCH_BATCH_STATUS":"批次状态",
+  "MODULES_BATCH_PACKAGE_AIU_START_DATE":"起始时间",
+  "MODULES_BATCH_PACKAGE_AIU_END_DATE":"结束时间",
+  "MODULES_BATCH_PACKAGE_COUNT":"数据包数量",
+  "MODULES_BATCH_AIP_COUNT":"数据量",
+  "MODULES_BATCH_RECORD_NAME":"申报名称",
+  "MODULES_BATCH_EXCEPTION_DESC":"异常说明",
+  "MODULES_BATCH_EXCEPTION_HANDLE_BEHAVIOR":"异常处理",
+  "MODULES_BATCH_DEAL_ACTION":"处理动作",
+  "MODULES_BATCH_ARCHIVAL_ID":"档号",
+  "MODULES_BATCH_NAME":"事项名称",
+  "MODULES_BATCH_RECORD_CODE":"证照编号",
+  "MODULES_BATCH_CREATE_DATE":"创建时间",
+  "MODULES_BATCH_MODIFY_DATE":"修改时间",
+
+
   "MODULES_DATABASE_DATA_FILTERING":"数据过滤",
   "MODULES_DATABASE_DATA_FORM":"按数据形态",
   "MODULES_DATABASE_SOURCE_SYSTEM":"按来源系统",
@@ -97,7 +114,7 @@
   "MODULES_DATABASE_FILE_TYPE":"文件类型",
   "MODULES_DATABASE_FILE_SIZE":"文件大小",
   "MODULES_DATABASE_MD5_CODE":"MD5码",
-  "MODULES_DATABASE_LOADING":"加载数据中...",
+  "MODULES_DATABASE_LOADING":"正在加载...",
   "MODULES_DATABASE_DOCKING_SYSTEM":"对接系统",
   "MODULES_DATABASE_DATA_UPDATE_TIME":"数据更新时间",
   "MODULES_DATABASE_DATA_SOURCE":"此数据源",
@@ -106,6 +123,12 @@
   "MODULES_DATABASE_RECORD_QUANTITY":"记录数量",
   "MODULES_DATABASE_ARCHIVED_DATA":"归档数据量",
   "MODULES_DATABASE_BROWSE_DATA":"浏览数据",
+
+  "MODULES_DATABASE_SIP_ID":"批次号",
+  "MODULES_DATABASE_DATA_PATH":"数据位置",
+  "MODULES_DATABASE_DATA_SIZE":"数据大小",
+  "MODULES_DATABASE_START_DATA":"开始事件",
+
 
   "MODULES_LOGIN_LOGIN":"登录",
   "MODULES_LOGIN_USER_NAME":"用户名",
@@ -125,6 +148,7 @@
   "MODULES_MAIN_LOGOUT":"登出",
 
   "MODULES_PROJECTMANAGE_PROJECT_MANAGEMENT":"项目管理",
+  "MODULES_PROJECTMANAGE_SYSTEM_ACCESS":"系统接入",
   "MODULES_PROJECTMANAGE_PROJECT_MANAGEMENT_PROMPT":"建立项目针对每个归档系统建立归档策略和业务模板",
   "MODULES_PROJECTMANAGE_CREATE":"创建",
   "MODULES_PROJECTMANAGE_PROJECT_SETTINGS":"项目设置",
@@ -149,6 +173,81 @@
   "MODULES_PROJECTMANAGE_PLEASE_FILL_IN":"请填写",
   "MODULES_PROJECTMANAGE_PLEASE_SELECT":"请选择",
   "MODULES_PROJECTMANAGE_DATA_BASE":"数据库",
+  "MODULES_PROJECTMANAGE_NEED_TO_CREATE_DATA_TEMPLATE":"还需要创建数据模板",
+  "MODULES_PROJECTMANAGE_NEED_TO_CREATE_DATA_TEMPLATE_PROMPT":"业务模板能够帮助您梳理业务流程，建立业务归档信息，并根据模板规则将业务信息填入到归档数据模型对应的位置上。",
+  "MODULES_PROJECTMANAGE_PROJECT_HAS_NOT_YET_DEFINED_TEMPLATE":"该项目还没有定义数据模板",
+  "MODULES_PROJECTMANAGE_CREATE_DATA_TEMPLATE":"创建数据模板",
+  "MODULES_PROJECTMANAGE_VERSION_NUMBER":"版本号",
+  "MODULES_PROJECTMANAGE_SAVE_TEMPLATE":"保存模板",
+  "MODULES_PROJECTMANAGE_DOCUMENT_TEMPLATE":"文档模板",
+  "MODULES_PROJECTMANAGE_DOCUMENT_TEMPLATE_NAME":"文档模板名称",
+  "MODULES_PROJECTMANAGE_CANCEL":"取消",
+  "MODULES_PROJECTMANAGE_CONFIRM":"确定",
+  "MODULES_PROJECTMANAGE_SAVE":"保存",
+  "MODULES_PROJECTMANAGE_ATTRIBUTE":"属性",
+  "MODULES_PROJECTMANAGE_DEFAULT_DATA_ITEM":"默认数据项",
+  "MODULES_PROJECTMANAGE_SEQUENCE_NUMBER":"序号",
+  "MODULES_PROJECTMANAGE_CHINESE_NAME":"中文名",
+  "MODULES_PROJECTMANAGE_ENGLISH_NAME":"英文名",
+  "MODULES_PROJECTMANAGE_ATTRIBUTE_NAME":"属性名",
+  "MODULES_PROJECTMANAGE_TYPE":"类型",
+  "MODULES_PROJECTMANAGE_LENGTH":"长度",
+  "MODULES_PROJECTMANAGE_REQUIRED":"必填",
+  "MODULES_PROJECTMANAGE_CUSTOMIZE_METADATA":"自定义元数据",
+  "MODULES_PROJECTMANAGE_YES":"是",
+  "MODULES_PROJECTMANAGE_NO":"否",
+  "MODULES_PROJECTMANAGE_GOOD_JOB":"干得不错!",
+  "MODULES_PROJECTMANAGE_TEMPLATE_UPGRADE_COMPLETED":"模板升级完成",
+  "MODULES_PROJECTMANAGE_IS_THERE_AN_UPGRADE":"确定升级吗?",
+  "MODULES_PROJECTMANAGE_DATA_TEMPLATES_NEED_TO_BE_UPGRADED":"数据模板修改之后需要升级",
+  "MODULES_PROJECTMANAGE_MODIFY_NODE_NAME":"修改节点名",
+  "MODULES_PROJECTMANAGE_NODE_NAME":"节点名称",
+  "MODULES_PROJECTMANAGE_ADD_FORM":"增加表单",
+  "MODULES_PROJECTMANAGE_INCREASE_BUSINESS_PROCESS_INFORMATION":"增加业务过程信息",
+  "MODULES_PROJECTMANAGE_GENERATE_PREVIEW":"生成预览",
+  "MODULES_PROJECTMANAGE_MODULE_NAME":"模块名",
+  "MODULES_PROJECTMANAGE_WIDTH":"宽度",
+  "MODULES_PROJECTMANAGE_CANNOT_CONFIGURE_ARCHIVE_POLICY":"您还没有创建数据模板，无法配置归档策略",
+  "MODULES_PROJECTMANAGE_PROJECT_HAS_NOT_YET_DEFINED_STRATEGY":"该项目还没有定义策略",
+  "MODULES_PROJECTMANAGE_IMMEDIATELY_CREATED":"立刻创建",
+  "MODULES_PROJECTMANAGE_ARCHIVE_POLICY":"归档策略",
+  "MODULES_PROJECTMANAGE_REF_RULES":"档号规则",
+  "MODULES_PROJECTMANAGE_SERIAL_NUMBER":"流水号",
+  "MODULES_PROJECTMANAGE_ELEMENT_TYPE":"元素类型",
+  "MODULES_PROJECTMANAGE_STRING":"字符串",
+  "MODULES_PROJECTMANAGE_FIELD":"字段",
+  "MODULES_PROJECTMANAGE_ADD_RULE":"添加规则",
+  "MODULES_PROJECTMANAGE_EXAMPLE":"示例",
+  "MODULES_PROJECTMANAGE_RETENTION_PERIOD":"保管期限",
+  "MODULES_PROJECTMANAGE_RETENTION_STRATEGY":"保留策略",
+  "MODULES_PROJECTMANAGE_BY_DEFINING_SERIES_OF_ARCHIVING_STRATEGIES":"通过定义一系列的归档策略，可以让系统通过定义好的规则对归档数据进行自动化赋予档号和保管期限。",
+  "MODULES_PROJECTMANAGE_PROJECT_COMPLETION":"项目创建完成",
+  "MODULES_PROJECTMANAGE_SUBORDINATE_SYSTEM":"所属系统",
+  "MODULES_PROJECTMANAGE_UPGRADE":"升级",
+  "MODULES_PROJECTMANAGE_NOT_UPGRADE":"不升级",
+
+  "MODULES_SERVICEWATCH_SERVICE_MONITORING":"服务监控",
+  "MODULES_SERVICEWATCH_SERVICE_STATUS_OF_INFOARCHIVES_IS_HERE":"InfoArchives的服务状态在此显示",
+  "MODULES_SERVICEWATCH_JOB_NAME":"JOB名称",
+  "MODULES_SERVICEWATCH_DESCRIPTION":"描述",
+  "MODULES_SERVICEWATCH_START_TIME":"启动时间",
+  "MODULES_SERVICEWATCH_CONTINUOUS_RUNNING_TIME":"持续运行时间",
+  "MODULES_SERVICEWATCH_CURRENT_STATE":"当前状态",
+  "MODULES_SERVICEWATCH_OPERATION":"操作",
+  "MODULES_SERVICEWATCH_DAY":"天",
+  "MODULES_SERVICEWATCH_HOUR":"小时",
+  "MODULES_SERVICEWATCH_MINUTE":"分",
+  "MODULES_SERVICEWATCH_SERVICE_STOP":"停止",
+  "MODULES_SERVICEWATCH_NORMAL_OPERATION":"正常",
+  "MODULES_SERVICEWATCH_TASK_START_TIME":"任务开始时间",
+  "MODULES_SERVICEWATCH_PACKET_PROFICIENCY":"数据包熟练",
+  "MODULES_SERVICEWATCH_SCHEDULE":"进度",
+  "MODULES_SERVICEWATCH_SERVICE_CAN_ONLY_RUN_TAS":"目前每个服务下只能运行一个任务，攻城狮正在全力开发多任务",
+  "MODULES_SERVICEWATCH_SHOWS_ONLY_TASKS_THAT_ARE_RUNNING":"此处只显示正在运行的任务，已完成的任务记录请进入",
+  "MODULES_SERVICEWATCH_DATA_BATCH":"数据批次",
+  "MODULES_SERVICEWATCH_FOR_VIEWING":"查看",
+
+  "MODULES_STATISTICS_DATA_STATISTICS":"数据统计",
 
 
 
