--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -1,7 +1,7 @@
 {
-  "PROJECT_MANAGE_NEW_PROJECT":"New project",
+  "PROJECT_MANAGE_NEW_PROJECT":"New Project",
   "MODULES_BATCH_SELECT_DATA_SOURCE":"Select data source",
-  "MODULES_BATCH_BATCH_STATUS":"Batch status",
+  "MODULES_BATCH_BATCH_STATUS":"Batch Status",
   "MODULES_BATCH_IN_OPERATION":"In operation",
   "MODULES_BATCH_COMPLETED":"Completed",
   "MODULES_BATCH_ABNORMAL":"Abnormal",
@@ -17,16 +17,16 @@
   "MODULES_BATCH_EXPORT_BATCH_LIST":"Export batch list",
   "MODULES_BATCH_DELETE_ABNORMAL_DATA":"Delete abnormal data",
   "MODULES_BATCH_DELETE_NO_DATA":"No data",
-  "MODULES_BATCH_DETAILED_PACKET":"Detailed packet",
-  "MODULES_BATCH_EXPORT_LIST":"Export list",
+  "MODULES_BATCH_DETAILED_PACKET":"Detailed Packet",
+  "MODULES_BATCH_EXPORT_LIST":"Export List",
   "MODULES_BATCH_DOWNLOAD":"Download",
   "MODULES_BATCH_PREVIEW":"Preview",
   "MODULES_BATCH_ABNORMAL_DATA_COLUMNS":"Abnormal data columns",
-  "MODULES_BATCH_DETAILED_INFORMATION":"Detailed information",
-  "MODULES_BATCH_BATCH_BASIC_INFORMATION":"Batch basic information",
-  "MODULES_BATCH_BATCH_NUMBER":"Batch number",
-  "MODULES_BATCH_BUSINESS_SYSTEM_ID":"Business system ID",
-  "MODULES_BATCH_BUSINESS_SYSTEM_NAME":"Business system name",
+  "MODULES_BATCH_DETAILED_INFORMATION":"Detailed Information",
+  "MODULES_BATCH_BATCH_BASIC_INFORMATION":"Batch Basic Information",
+  "MODULES_BATCH_BATCH_NUMBER":"Batch Number",
+  "MODULES_BATCH_BUSINESS_SYSTEM_ID":"Business System ID",
+  "MODULES_BATCH_BUSINESS_SYSTEM_NAME":"Business System name",
   "MODULES_BATCH_STATE":"State",
   "MODULES_BATCH_AIU_PACKAGE":"AIU package",
   "MODULES_BATCH_AIU_PACKAGE_COMPLETE":"AIU package complete",
@@ -45,11 +45,11 @@
   "MODULES_BATCH_ABNORMAL_PACKET_TYPE":"Abnormal packet type",
   "MODULES_BATCH_ABNORMAL_PACKET_COUNT":"Abnormal packet count",
   "MODULES_BATCH_CLICK_VIEW":"Click View",
-  "MODULES_BATCH_EXCEPTION_HANDLING":"Exception handling",
+  "MODULES_BATCH_EXCEPTION_HANDLING":"Exception Handling",
   "MODULES_BATCH_PENDING_TREATMENT":"Pending treatment",
   "MODULES_BATCH_BEEN_CONVERTED":"Been converted",
   "MODULES_BATCH_DELETED":"Deleted",
-  "MODULES_BATCH_EXCEPTION_HANDLING_RECORD":"Exception handling record",
+  "MODULES_BATCH_EXCEPTION_HANDLING_RECORD":"Exception Record",
   "MODULES_BATCH_PROCESSING_TIME":"Processing time",
   "MODULES_BATCH_PROCESSING_ACTION":"Processing action",
   "MODULES_BATCH_VIEW_DATA":"View data",
@@ -60,7 +60,24 @@
   "MODULES_BATCH_AIP_CONVERSION_QUANTITY":"AIP conversion quantity",
   "MODULES_BATCH_DATA_CHECK_ERROR":"Data check error",
   "MODULES_BATCH_FORCED_CONVERSION":"Forced conversion",
-  "MODULES_BATCH_BUSINESS_UNIT":"Business unit",
+  "MODULES_BATCH_BUSINESS_UNIT":"Business Unit",
+
+  "MODULES_BATCH_BATCH_CODE":"Batch Code",
+  "MODULES_BATCH_BATCH_STATUS":"Batch status",
+  "MODULES_BATCH_PACKAGE_AIU_START_DATE":"Package AIU Start Date",
+  "MODULES_BATCH_PACKAGE_AIU_END_DATE":"Package AIP End Date",
+  "MODULES_BATCH_PACKAGE_COUNT":"Package Count",
+  "MODULES_BATCH_AIP_COUNT":"AIP Count",
+  "MODULES_BATCH_RECORD_NAME":"Record Name",
+  "MODULES_BATCH_EXCEPTION_DESC":"Exception Desc",
+  "MODULES_BATCH_EXCEPTION_HANDLE_BEHAVIOR":"Exception Handle Behavior",
+  "MODULES_BATCH_DEAL_ACTION":"Deal Action",
+  "MODULES_BATCH_ARCHIVAL_ID":"Archival ID",
+  "MODULES_BATCH_NAME":"Name",
+  "MODULES_BATCH_RECORD_CODE":"Record Code",
+  "MODULES_BATCH_CREATE_DATE":"Create Date",
+  "MODULES_BATCH_MODIFY_DATE":"Modify Date",
+
 
   "MODULES_DATABASE_DATA_FILTERING":"Data filtering",
   "MODULES_DATABASE_DATA_FORM":"Data form",
@@ -71,9 +88,9 @@
   "MODULES_DATABASE_DATA_VIEW":"Data view",
   "MODULES_DATABASE_DATA_VIEW_PROMPT":"Data filtering can be used to browse specific business records",
   "MODULES_DATABASE_VIEW_TYPE":"View type",
-  "MODULES_DATABASE_BUSINESS_UNIT":"Business unit",
-  "MODULES_DATABASE_SYSTEM_SOURCE":"System source",
-  "MODULES_DATABASE_DATA_INFORMATION":"Data information",
+  "MODULES_DATABASE_BUSINESS_UNIT":"Business Unit",
+  "MODULES_DATABASE_SYSTEM_SOURCE":"System Source",
+  "MODULES_DATABASE_DATA_INFORMATION":"Data Information",
   "MODULES_DATABASE_LATEST_UPDATE_DATE":"Latest update date",
   "MODULES_DATABASE_NUMBER_OF_DOCKING_SYSTEMS":"Number of docking systems",
   "MODULES_DATABASE_NUMBER_OF_BUSINESS_UNITS":"Number of business units",
@@ -86,29 +103,35 @@
   "MODULES_DATABASE_MATCHED":"Matched",
   "MODULES_DATABASE_COMPANY":"Company",
   "MODULES_DATABASE_SELECT_UNIT":"Select unit",
-  "MODULES_DATABASE_BUSINESS_MATTERS":"Business matters",
+  "MODULES_DATABASE_BUSINESS_MATTERS":"Business Matters",
   "MODULES_DATABASE_SELECT_BUSINESS_MATTERS":"Select business matters",
-  "MODULES_DATABASE_BUSINESS_TRANSACTION":"Business transaction",
+  "MODULES_DATABASE_BUSINESS_TRANSACTION":"Business Code",
   "MODULES_DATABASE_ESSENTIAL_INFORMATION":"Essential information",
   "MODULES_DATABASE_NODE_NAME":"Node name",
-  "MODULES_DATABASE_OPERATION_DATE":"Operation date",
+  "MODULES_DATABASE_OPERATION_DATE":"Operation Date",
   "MODULES_DATABASE_OPERATOR":"Operator",
-  "MODULES_DATABASE_FILE_NAME":"File name",
-  "MODULES_DATABASE_FILE_TYPE":"File type",
-  "MODULES_DATABASE_FILE_SIZE":"File size",
+  "MODULES_DATABASE_FILE_NAME":"File Name",
+  "MODULES_DATABASE_FILE_TYPE":"File Type",
+  "MODULES_DATABASE_FILE_SIZE":"File Size",
   "MODULES_DATABASE_MD5_CODE":"MD5 code",
   "MODULES_DATABASE_LOADING":"Loading...",
-  "MODULES_DATABASE_DOCKING_SYSTEM":"Docking system",
+  "MODULES_DATABASE_DOCKING_SYSTEM":"Docking System",
   "MODULES_DATABASE_DATA_UPDATE_TIME":"Data update time",
-  "MODULES_DATABASE_DATA_SOURCE":"Data source",
+  "MODULES_DATABASE_DATA_SOURCE":"Data Source",
   "MODULES_DATABASE_GENERAL_LIBRARY":"General library",
   "MODULES_DATABASE_TRAFFIC":"Traffic",
-  "MODULES_DATABASE_RECORD_QUANTITY":"Record quantity",
-  "MODULES_DATABASE_ARCHIVED_DATA":"Archived data",
-  "MODULES_DATABASE_BROWSE_DATA":"Browse data",
+  "MODULES_DATABASE_RECORD_QUANTITY":"Record Quantity",
+  "MODULES_DATABASE_ARCHIVED_DATA":"Archived Data",
+  "MODULES_DATABASE_BROWSE_DATA":"Browse Data",
+
+  "MODULES_DATABASE_SIP_ID":"SIP ID",
+  "MODULES_DATABASE_DATA_PATH":"Data Path",
+  "MODULES_DATABASE_DATA_SIZE":"Data Size",
+  "MODULES_DATABASE_START_DATA":"Start Data",
+
 
   "MODULES_LOGIN_LOGIN":"Login",
-  "MODULES_LOGIN_USER_NAME":"User name",
+  "MODULES_LOGIN_USER_NAME":"User Name",
   "MODULES_LOGIN_PLEASE_ENTER_ACCOUNT":"Please enter account",
   "MODULES_LOGIN_PASSWORDT":"Password",
   "MODULES_LOGIN_PLEASE_INPUT_A_PASSWORD":"Please input a password",
@@ -124,31 +147,107 @@
   "MODULES_MAIN_SWITCH_LANGUAGE":"Switch language",
   "MODULES_MAIN_LOGOUT":"Logout",
 
-  "MODULES_PROJECTMANAGE_PROJECT_MANAGEMENT":"Project management",
+  "MODULES_PROJECTMANAGE_PROJECT_MANAGEMENT":"Project Management",
+  "MODULES_PROJECTMANAGE_SYSTEM_ACCESS":"System Access",
   "MODULES_PROJECTMANAGE_PROJECT_MANAGEMENT_PROMPT":"Set up the project to set up archive policy and business template for each archive system",
   "MODULES_PROJECTMANAGE_CREATE":"Create",
-  "MODULES_PROJECTMANAGE_PROJECT_SETTINGS":"Project settings",
+  "MODULES_PROJECTMANAGE_PROJECT_SETTINGS":"Project Settings",
   "MODULES_PROJECTMANAGE_PLEASE_CREATE_A_DATA_TEMPLATE":"Please create a data template",
   "MODULES_PROJECTMANAGE_CREATE_A_DATA_TEMPLATE_TO":"Create a data template to configure the policy",
   "MODULES_PROJECTMANAGE_PROJECT_BASIC_INFORMATION":"Project basic information",
-  "MODULES_PROJECTMANAGE_DATA_TEMPLATE":"Data template",
-  "MODULES_PROJECTMANAGE_POLICY_SETTINGS":"Policy settings",
-  "MODULES_PROJECTMANAGE_DISPLAY_TEMPLATE":"Display template",
-  "MODULES_PROJECTMANAGE_SERVICE_NUMBER":"Service number",
-  "MODULES_PROJECTMANAGE_PROJECT_NAME":"Project name",
-  "MODULES_PROJECTMANAGE_CREATE_TIME":"Create time",
-  "MODULES_PROJECTMANAGE_LAST_MODIFIED":"Last modified",
+  "MODULES_PROJECTMANAGE_DATA_TEMPLATE":"Data Template",
+  "MODULES_PROJECTMANAGE_POLICY_SETTINGS":"Policy Settings",
+  "MODULES_PROJECTMANAGE_DISPLAY_TEMPLATE":"Show Template",
+  "MODULES_PROJECTMANAGE_SERVICE_NUMBER":"Service Number",
+  "MODULES_PROJECTMANAGE_PROJECT_NAME":"Project Name",
+  "MODULES_PROJECTMANAGE_CREATE_TIME":"Create Time",
+  "MODULES_PROJECTMANAGE_LAST_MODIFIED":"Last Modified",
   "MODULES_PROJECTMANAGE_CREATOR":"Creator",
   "MODULES_PROJECTMANAGE_SOURCE_SYSTEM_DATABASE_INFORMATION":"Source system database information",
-  "MODULES_PROJECTMANAGE_DATABASE_TYPE":"Database type",
-  "MODULES_PROJECTMANAGE_DATABASE_VERSION":"Database version",
-  "MODULES_PROJECTMANAGE_DATA_EXTRACTION_METHOD":"Data extraction method",
-  "MODULES_PROJECTMANAGE_ETL_DATA_EXTRACTION":"ETL data extraction",
-  "MODULES_PROJECTMANAGE_AIP_INTERFACE":"AIP interface",
-  "MODULES_PROJECTMANAGE_SAVE_CONFIGURATION":"Save configuration",
+  "MODULES_PROJECTMANAGE_DATABASE_TYPE":"Database Type",
+  "MODULES_PROJECTMANAGE_DATABASE_VERSION":"Database Version",
+  "MODULES_PROJECTMANAGE_DATA_EXTRACTION_METHOD":"Data Extraction Method",
+  "MODULES_PROJECTMANAGE_ETL_DATA_EXTRACTION":"ETL Data Extraction",
+  "MODULES_PROJECTMANAGE_AIP_INTERFACE":"AIP Interface",
+  "MODULES_PROJECTMANAGE_SAVE_CONFIGURATION":"Save Configuration",
   "MODULES_PROJECTMANAGE_PLEASE_FILL_IN":"Please fill in",
   "MODULES_PROJECTMANAGE_PLEASE_SELECT":"Please select",
-  "MODULES_PROJECTMANAGE_DATA_BASE":"Data base",
+  "MODULES_PROJECTMANAGE_DATA_BASE":"Data Base",
+  "MODULES_PROJECTMANAGE_NEED_TO_CREATE_DATA_TEMPLATE":"You need to create a data template",
+  "MODULES_PROJECTMANAGE_NEED_TO_CREATE_DATA_TEMPLATE_PROMPT":"The business template can help you to sort out business processes, establish business archive information, and populate business information with the corresponding location in the archive data model according to the template rules.",
+  "MODULES_PROJECTMANAGE_PROJECT_HAS_NOT_YET_DEFINED_TEMPLATE":"The project has not yet defined a data template",
+  "MODULES_PROJECTMANAGE_CREATE_DATA_TEMPLATE":"Create data template",
+  "MODULES_PROJECTMANAGE_VERSION_NUMBER":"Version Number",
+  "MODULES_PROJECTMANAGE_SAVE_TEMPLATE":"Save Template",
+  "MODULES_PROJECTMANAGE_DOCUMENT_TEMPLATE":"Document Template",
+  "MODULES_PROJECTMANAGE_DOCUMENT_TEMPLATE_NAME":"Document Template Name",
+  "MODULES_PROJECTMANAGE_CANCEL":"Cancel",
+  "MODULES_PROJECTMANAGE_CONFIRM":"Confirm",
+  "MODULES_PROJECTMANAGE_SAVE":"Save",
+  "MODULES_PROJECTMANAGE_ATTRIBUTE":"Attribute",
+  "MODULES_PROJECTMANAGE_DEFAULT_DATA_ITEM":"Default data item",
+  "MODULES_PROJECTMANAGE_SEQUENCE_NUMBER":"Sequence Number",
+  "MODULES_PROJECTMANAGE_CHINESE_NAME":"Chinese Name",
+  "MODULES_PROJECTMANAGE_ENGLISH_NAME":"English Name",
+  "MODULES_PROJECTMANAGE_ATTRIBUTE_NAME":"Attribute Name",
+  "MODULES_PROJECTMANAGE_TYPE":"Type",
+  "MODULES_PROJECTMANAGE_LENGTH":"Length",
+  "MODULES_PROJECTMANAGE_REQUIRED":"Required",
+  "MODULES_PROJECTMANAGE_CUSTOMIZE_METADATA":"Customize Metadata",
+  "MODULES_PROJECTMANAGE_YES":"Yes",
+  "MODULES_PROJECTMANAGE_NO":"No",
+  "MODULES_PROJECTMANAGE_GOOD_JOB":"Good job !",
+  "MODULES_PROJECTMANAGE_TEMPLATE_UPGRADE_COMPLETED":"Template upgrade completed",
+  "MODULES_PROJECTMANAGE_IS_THERE_AN_UPGRADE":"Is there an upgrade?",
+  "MODULES_PROJECTMANAGE_DATA_TEMPLATES_NEED_TO_BE_UPGRADED":"Data templates need to be upgraded after modification",
+  "MODULES_PROJECTMANAGE_MODIFY_NODE_NAME":"Modify node name",
+  "MODULES_PROJECTMANAGE_NODE_NAME":"Node Name",
+  "MODULES_PROJECTMANAGE_ADD_FORM":"Add form",
+  "MODULES_PROJECTMANAGE_INCREASE_BUSINESS_PROCESS_INFORMATION":"Increase business process information",
+  "MODULES_PROJECTMANAGE_GENERATE_PREVIEW":"Generate preview",
+  "MODULES_PROJECTMANAGE_MODULE_NAME":"Module Name",
+  "MODULES_PROJECTMANAGE_WIDTH":"Width",
+  "MODULES_PROJECTMANAGE_CANNOT_CONFIGURE_ARCHIVE_POLICY":"You have not created a data template and cannot configure the archive policy",
+  "MODULES_PROJECTMANAGE_PROJECT_HAS_NOT_YET_DEFINED_STRATEGY":"The project has not yet defined strategy",
+  "MODULES_PROJECTMANAGE_IMMEDIATELY_CREATED":"Immediately created",
+  "MODULES_PROJECTMANAGE_ARCHIVE_POLICY":"Archive Policy",
+  "MODULES_PROJECTMANAGE_REF_RULES":"Ref rules",
+  "MODULES_PROJECTMANAGE_SERIAL_NUMBER":"Serial Number",
+  "MODULES_PROJECTMANAGE_ELEMENT_TYPE":"Element Type",
+  "MODULES_PROJECTMANAGE_STRING":"String",
+  "MODULES_PROJECTMANAGE_FIELD":"Field",
+  "MODULES_PROJECTMANAGE_ADD_RULE":"Add rule",
+  "MODULES_PROJECTMANAGE_EXAMPLE":"Example",
+  "MODULES_PROJECTMANAGE_RETENTION_PERIOD":"Retention Period",
+  "MODULES_PROJECTMANAGE_RETENTION_STRATEGY":"Retention Strategy",
+  "MODULES_PROJECTMANAGE_BY_DEFINING_SERIES_OF_ARCHIVING_STRATEGIES":"By defining a series of archiving strategies, the system can be used to automate the assignment of archival data and the retention period through defined rules.",
+  "MODULES_PROJECTMANAGE_PROJECT_COMPLETION":"Project Completion",
+  "MODULES_PROJECTMANAGE_SUBORDINATE_SYSTEM":"Subordinate System",
+  "MODULES_PROJECTMANAGE_UPGRADE":"Upgrade",
+  "MODULES_PROJECTMANAGE_NOT_UPGRADE":"Not Upgrade",
+
+  "MODULES_SERVICEWATCH_SERVICE_MONITORING":"Service Monitoring",
+  "MODULES_SERVICEWATCH_SERVICE_STATUS_OF_INFOARCHIVES_IS_HERE":"The service status of InfoArchives is shown here",
+  "MODULES_SERVICEWATCH_JOB_NAME":"JOB Name",
+  "MODULES_SERVICEWATCH_DESCRIPTION":"Description",
+  "MODULES_SERVICEWATCH_START_TIME":"Start Date",
+  "MODULES_SERVICEWATCH_CONTINUOUS_RUNNING_TIME":"End Date",
+  "MODULES_SERVICEWATCH_CURRENT_STATE":"Current State",
+  "MODULES_SERVICEWATCH_OPERATION":"Operation",
+  "MODULES_SERVICEWATCH_DAY":"Day",
+  "MODULES_SERVICEWATCH_HOUR":"Hour",
+  "MODULES_SERVICEWATCH_MINUTE":"Minute",
+  "MODULES_SERVICEWATCH_SERVICE_STOP":"Stop",
+  "MODULES_SERVICEWATCH_NORMAL_OPERATION":"Normal",
+  "MODULES_SERVICEWATCH_TASK_START_TIME":"Task start time",
+  "MODULES_SERVICEWATCH_PACKET_PROFICIENCY":"Packet proficiency",
+  "MODULES_SERVICEWATCH_SCHEDULE":"Schedule",
+  "MODULES_SERVICEWATCH_SERVICE_CAN_ONLY_RUN_TAS":"At present, each service can only run a task, siege lion is full development of multi-tasking",
+  "MODULES_SERVICEWATCH_SHOWS_ONLY_TASKS_THAT_ARE_RUNNING":"This shows only the tasks that are running, and the completed task records are entered into the",
+  "MODULES_SERVICEWATCH_DATA_BATCH":"Data Batch",
+  "MODULES_SERVICEWATCH_FOR_VIEWING":"for viewing",
+
+  "MODULES_STATISTICS_DATA_STATISTICS":"Data Statistics",
 
 
 
@@ -173,5 +272,5 @@
 
 
 
-  "PROJECT_MANAGE_NEW_PROJECT":"New project"
+  "PROJECT_MANAGE_NEW_PROJECT":"New Project"
 }
