update : statistics & connectMap

--- a/app/i18n/cn.json
+++ b/app/i18n/cn.json
@@ -1,5 +1,8 @@
 {
   "PROJECT_MANAGE_NEW_PROJECT":"新建项目",
+
+  "PROJECT_CONNECTMAP_CONNECTION_TOPOLOGY":"连接拓扑",
+
   "MODULES_BATCH_SELECT_DATA_SOURCE":"选择数据源",
   "MODULES_BATCH_BATCH_STATUS":"批次状态",
   "MODULES_BATCH_IN_OPERATION":"运行中",
@@ -59,7 +62,7 @@
   "MODULES_BATCH_FAIL":"失败",
   "MODULES_BATCH_AIP_CONVERSION_QUANTITY":"AIP转换数量",
   "MODULES_BATCH_DATA_CHECK_ERROR":"数据校验错误",
-  "MODULES_BATCH_FORCED_CONVERSION":"强制转换数量",
+  "MODULES_BATCH_FORCED_CONVERSION_QUANTITY":"强制转换数量",
   "MODULES_BATCH_BUSINESS_UNIT":"业务单位",
 
   "MODULES_BATCH_BATCH_CODE":"批次号",
@@ -123,6 +126,7 @@
   "MODULES_DATABASE_RECORD_QUANTITY":"记录数量",
   "MODULES_DATABASE_ARCHIVED_DATA":"归档数据量",
   "MODULES_DATABASE_BROWSE_DATA":"浏览数据",
+  "MODULES_DATABASE_DATA_BASE":"数据仓库",
 
   "MODULES_DATABASE_SIP_ID":"批次号",
   "MODULES_DATABASE_DATA_PATH":"数据位置",
@@ -214,7 +218,7 @@
   "MODULES_PROJECTMANAGE_REF_RULES":"档号规则",
   "MODULES_PROJECTMANAGE_SERIAL_NUMBER":"流水号",
   "MODULES_PROJECTMANAGE_ELEMENT_TYPE":"元素类型",
-  "MODULES_PROJECTMANAGE_STRING":"字符串",
+  "MODULES_PROJECTMANAGE_STRING":"字符型",
   "MODULES_PROJECTMANAGE_FIELD":"字段",
   "MODULES_PROJECTMANAGE_ADD_RULE":"添加规则",
   "MODULES_PROJECTMANAGE_EXAMPLE":"示例",
@@ -225,6 +229,21 @@
   "MODULES_PROJECTMANAGE_SUBORDINATE_SYSTEM":"所属系统",
   "MODULES_PROJECTMANAGE_UPGRADE":"升级",
   "MODULES_PROJECTMANAGE_NOT_UPGRADE":"不升级",
+  "MODULES_PROJECTMANAGE_DELETE_ITEM":"删除项目",
+  "MODULES_PROJECTMANAGE_SURE_WANT_TO_DELETE":"确定要删除该项目吗?",
+  "MODULES_PROJECTMANAGE_DELETE_NODE":"删除节点",
+  "MODULES_PROJECTMANAGE_SURE_WANT_TO_DELETE_NODE":"确定要删除该节点吗?",
+  "MODULES_PROJECTMANAGE_NODE_NAME_CAN_NOT_BE_REPEATED":"节点名不能重复",
+  "MODULES_PROJECTMANAGE_GOT_IT":"知道了",
+  "MODULES_PROJECTMANAGE_NODE_NAME_CAN_NOT_BE_EMPTY":"节点名不能为空",
+  "MODULES_PROJECTMANAGE_DATE":"日期",
+  "MODULES_PROJECTMANAGE_NUMBER":"数字型",
+  "MODULES_PROJECTMANAGE_BOOLEAN":"布尔型",
+  "MODULES_PROJECTMANAGE_PROPERTY_NOT_BE_NULL":"属性不应为空或重复",
+  "MODULES_PROJECTMANAGE_ENTER_SERIAL_CODE_LENGTH":"请输入流水号长度",
+  "MODULES_PROJECTMANAGE_PROPERTY_VALUE_CANNOT_EMPTY":"属性值不能为空",
+  "MODULES_PROJECTMANAGE_PLEASE_SELECT_ATTRIBUTE":"请选择属性",
+
 
   "MODULES_SERVICEWATCH_SERVICE_MONITORING":"服务监控",
   "MODULES_SERVICEWATCH_SERVICE_STATUS_OF_INFOARCHIVES_IS_HERE":"InfoArchives的服务状态在此显示",
@@ -248,6 +267,8 @@
   "MODULES_SERVICEWATCH_FOR_VIEWING":"查看",
 
   "MODULES_STATISTICS_DATA_STATISTICS":"数据统计",
+
+  "MODULES_USERMANAGE_SYSTEM_SETTINGS":"系统设置",
 
 
 
