--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -1,5 +1,8 @@
 {
   "PROJECT_MANAGE_NEW_PROJECT":"New Project",
+
+  "PROJECT_CONNECTMAP_CONNECTION_TOPOLOGY":"Connect Topology",
+
   "MODULES_BATCH_SELECT_DATA_SOURCE":"Select data source",
   "MODULES_BATCH_BATCH_STATUS":"Batch Status",
   "MODULES_BATCH_IN_OPERATION":"In operation",
@@ -7,7 +10,7 @@
   "MODULES_BATCH_ABNORMAL":"Abnormal",
   "MODULES_BATCH_ALL":"All",
   "MODULES_BATCH_ABNORMAL_DISPOSAL":"Abnormal disposal",
-  "MODULES_BATCH_FORCED_CONVERSION":"Forced conversion",
+  "MODULES_BATCH_FORCED_CONVERSION":"Force Convert",
   "MODULES_BATCH_DELETE":"Delete",
   "MODULES_BATCH_FILTER":"Filter",
   "MODULES_BATCH_TIME_FRAME":"Time frame",
@@ -59,7 +62,7 @@
   "MODULES_BATCH_FAIL":"Fail",
   "MODULES_BATCH_AIP_CONVERSION_QUANTITY":"AIP conversion quantity",
   "MODULES_BATCH_DATA_CHECK_ERROR":"Data check error",
-  "MODULES_BATCH_FORCED_CONVERSION":"Forced conversion",
+  "MODULES_BATCH_FORCED_CONVERSION_QUANTITY":"Force Convert Count",
   "MODULES_BATCH_BUSINESS_UNIT":"Business Unit",
 
   "MODULES_BATCH_BATCH_CODE":"Batch Code",
@@ -123,6 +126,7 @@
   "MODULES_DATABASE_RECORD_QUANTITY":"Record Quantity",
   "MODULES_DATABASE_ARCHIVED_DATA":"Archived Data",
   "MODULES_DATABASE_BROWSE_DATA":"Browse Data",
+  "MODULES_DATABASE_DATA_BASE":"Data Base",
 
   "MODULES_DATABASE_SIP_ID":"SIP ID",
   "MODULES_DATABASE_DATA_PATH":"Data Path",
@@ -148,7 +152,7 @@
   "MODULES_MAIN_LOGOUT":"Logout",
 
   "MODULES_PROJECTMANAGE_PROJECT_MANAGEMENT":"Project Management",
-  "MODULES_PROJECTMANAGE_SYSTEM_ACCESS":"System Access",
+  "MODULES_PROJECTMANAGE_SYSTEM_ACCESS":"System Linked",
   "MODULES_PROJECTMANAGE_PROJECT_MANAGEMENT_PROMPT":"Set up the project to set up archive policy and business template for each archive system",
   "MODULES_PROJECTMANAGE_CREATE":"Create",
   "MODULES_PROJECTMANAGE_PROJECT_SETTINGS":"Project Settings",
@@ -212,7 +216,7 @@
   "MODULES_PROJECTMANAGE_IMMEDIATELY_CREATED":"Immediately created",
   "MODULES_PROJECTMANAGE_ARCHIVE_POLICY":"Archive Policy",
   "MODULES_PROJECTMANAGE_REF_RULES":"Ref rules",
-  "MODULES_PROJECTMANAGE_SERIAL_NUMBER":"Serial Number",
+  "MODULES_PROJECTMANAGE_SERIAL_NUMBER":"Serial Code",
   "MODULES_PROJECTMANAGE_ELEMENT_TYPE":"Element Type",
   "MODULES_PROJECTMANAGE_STRING":"String",
   "MODULES_PROJECTMANAGE_FIELD":"Field",
@@ -225,8 +229,23 @@
   "MODULES_PROJECTMANAGE_SUBORDINATE_SYSTEM":"Subordinate System",
   "MODULES_PROJECTMANAGE_UPGRADE":"Upgrade",
   "MODULES_PROJECTMANAGE_NOT_UPGRADE":"Not Upgrade",
+  "MODULES_PROJECTMANAGE_DELETE_ITEM":"Delete Item",
+  "MODULES_PROJECTMANAGE_SURE_WANT_TO_DELETE":"Are you sure you want to delete the item?",
+  "MODULES_PROJECTMANAGE_DELETE_NODE":"Delete Node",
+  "MODULES_PROJECTMANAGE_SURE_WANT_TO_DELETE_NODE":"Are you sure you want to delete the node?",
+  "MODULES_PROJECTMANAGE_NODE_NAME_CAN_NOT_BE_REPEATED":"The node name can not be repeated",
+  "MODULES_PROJECTMANAGE_GOT_IT":"Got it",
+  "MODULES_PROJECTMANAGE_NODE_NAME_CAN_NOT_BE_EMPTY":"The node name can not be empty",
+  "MODULES_PROJECTMANAGE_DATE":"Date",
+  "MODULES_PROJECTMANAGE_NUMBER":"Number",
+  "MODULES_PROJECTMANAGE_BOOLEAN":"Boolean",
+  "MODULES_PROJECTMANAGE_PROPERTY_NOT_BE_NULL":"Property should not be null or repeat",
+  "MODULES_PROJECTMANAGE_ENTER_SERIAL_CODE_LENGTH":"Please enter the serial code length",
+  "MODULES_PROJECTMANAGE_PROPERTY_VALUE_CANNOT_EMPTY":"The property value cannot be empty",
+  "MODULES_PROJECTMANAGE_PLEASE_SELECT_ATTRIBUTE":"Please select the attribute",
 
-  "MODULES_SERVICEWATCH_SERVICE_MONITORING":"Service Monitoring",
+
+  "MODULES_SERVICEWATCH_SERVICE_MONITORING":"Service Monitor",
   "MODULES_SERVICEWATCH_SERVICE_STATUS_OF_INFOARCHIVES_IS_HERE":"The service status of InfoArchives is shown here",
   "MODULES_SERVICEWATCH_JOB_NAME":"JOB Name",
   "MODULES_SERVICEWATCH_DESCRIPTION":"Description",
@@ -248,6 +267,8 @@
   "MODULES_SERVICEWATCH_FOR_VIEWING":"for viewing",
 
   "MODULES_STATISTICS_DATA_STATISTICS":"Data Statistics",
+
+  "MODULES_USERMANAGE_SYSTEM_SETTINGS":"System Settings",
 
 
 
