--- a/app/i18n/cn.json
+++ b/app/i18n/cn.json
@@ -243,10 +243,12 @@
   "MODULES_PROJECTMANAGE_ENTER_SERIAL_CODE_LENGTH":"请输入流水号长度",
   "MODULES_PROJECTMANAGE_PROPERTY_VALUE_CANNOT_EMPTY":"属性值不能为空",
   "MODULES_PROJECTMANAGE_PLEASE_SELECT_ATTRIBUTE":"请选择属性",
+  "MODULES_PROJECTMANAGE_EXPORT_SAMPLE":"导出样例",
+  "MODULES_PROJECTMANAGE_EXPORT_TEMPLATE":"导出模版",
 
 
   "MODULES_SERVICEWATCH_SERVICE_MONITORING":"服务监控",
-  "MODULES_SERVICEWATCH_SERVICE_STATUS_OF_INFOARCHIVES_IS_HERE":"InfoArchives的服务状态在此显示",
+  "MODULES_SERVICEWATCH_SERVICE_STATUS_OF_INFOARCHIVES_IS_HERE":"系统所有服务状态在此显示",
   "MODULES_SERVICEWATCH_JOB_NAME":"JOB名称",
   "MODULES_SERVICEWATCH_DESCRIPTION":"描述",
   "MODULES_SERVICEWATCH_START_TIME":"启动时间",
@@ -265,6 +267,7 @@
   "MODULES_SERVICEWATCH_SHOWS_ONLY_TASKS_THAT_ARE_RUNNING":"此处只显示正在运行的任务，已完成的任务记录请进入",
   "MODULES_SERVICEWATCH_DATA_BATCH":"数据批次",
   "MODULES_SERVICEWATCH_FOR_VIEWING":"查看",
+  "MODULES_SERVICEWATCH_NO_TASK":"没有任务",
 
   "MODULES_STATISTICS_DATA_STATISTICS":"数据统计",
 
