--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -170,7 +170,7 @@
   "MODULES_PROJECTMANAGE_SOURCE_SYSTEM_DATABASE_INFORMATION":"Source system database information",
   "MODULES_PROJECTMANAGE_DATABASE_TYPE":"Database Type",
   "MODULES_PROJECTMANAGE_DATABASE_VERSION":"Database Version",
-  "MODULES_PROJECTMANAGE_DATA_EXTRACTION_METHOD":"Data Extraction Method",
+  "MODULES_PROJECTMANAGE_DATA_EXTRACTION_METHOD":"Data extraction method",
   "MODULES_PROJECTMANAGE_ETL_DATA_EXTRACTION":"ETL Data Extraction",
   "MODULES_PROJECTMANAGE_AIP_INTERFACE":"AIP Interface",
   "MODULES_PROJECTMANAGE_SAVE_CONFIGURATION":"Save Configuration",
@@ -186,7 +186,7 @@
   "MODULES_PROJECTMANAGE_DOCUMENT_TEMPLATE":"Document Template",
   "MODULES_PROJECTMANAGE_DOCUMENT_TEMPLATE_NAME":"Document Template Name",
   "MODULES_PROJECTMANAGE_CANCEL":"Cancel",
-  "MODULES_PROJECTMANAGE_CONFIRM":"Confirm",
+  "MODULES_PROJECTMANAGE_CONFIRM":"OK",
   "MODULES_PROJECTMANAGE_SAVE":"Save",
   "MODULES_PROJECTMANAGE_ATTRIBUTE":"Attribute",
   "MODULES_PROJECTMANAGE_DEFAULT_DATA_ITEM":"Default data item",
@@ -243,10 +243,12 @@
   "MODULES_PROJECTMANAGE_ENTER_SERIAL_CODE_LENGTH":"Please enter the serial code length",
   "MODULES_PROJECTMANAGE_PROPERTY_VALUE_CANNOT_EMPTY":"The property value cannot be empty",
   "MODULES_PROJECTMANAGE_PLEASE_SELECT_ATTRIBUTE":"Please select the attribute",
+  "MODULES_PROJECTMANAGE_EXPORT_SAMPLE":"Export Sample",
+  "MODULES_PROJECTMANAGE_EXPORT_TEMPLATE":"Export Template",
 
 
   "MODULES_SERVICEWATCH_SERVICE_MONITORING":"Service Monitor",
-  "MODULES_SERVICEWATCH_SERVICE_STATUS_OF_INFOARCHIVES_IS_HERE":"The service status of InfoArchives is shown here",
+  "MODULES_SERVICEWATCH_SERVICE_STATUS_OF_INFOARCHIVES_IS_HERE":"All service status of the system is shown here",
   "MODULES_SERVICEWATCH_JOB_NAME":"JOB Name",
   "MODULES_SERVICEWATCH_DESCRIPTION":"Description",
   "MODULES_SERVICEWATCH_START_TIME":"Start Date",
@@ -265,6 +267,7 @@
   "MODULES_SERVICEWATCH_SHOWS_ONLY_TASKS_THAT_ARE_RUNNING":"This shows only the tasks that are running, and the completed task records are entered into the",
   "MODULES_SERVICEWATCH_DATA_BATCH":"Data Batch",
   "MODULES_SERVICEWATCH_FOR_VIEWING":"for viewing",
+  "MODULES_SERVICEWATCH_NO_TASK":"No task",
 
   "MODULES_STATISTICS_DATA_STATISTICS":"Data Statistics",
 
