update : templateModule (container draggable)

--- a/app/i18n/cn.json
+++ b/app/i18n/cn.json
@@ -64,6 +64,9 @@
   "MODULES_BATCH_DATA_CHECK_ERROR":"数据校验错误",
   "MODULES_BATCH_FORCED_CONVERSION_QUANTITY":"强制转换数量",
   "MODULES_BATCH_BUSINESS_UNIT":"业务单位",
+  "MODULES_BATCH_NO_ARCHIVED_DATA":"没有归档数据",
+  "MODULES_BATCH_NO_ARCHIVED_DATA_PROMPT_ONE":"请检查与业务系统的网络连接是否通畅或者数据库连接的情况",
+  "MODULES_BATCH_NO_ARCHIVED_DATA_PROMPT_TWO":"数据封装服务可能未启动，请查看",
 
   "MODULES_BATCH_BATCH_CODE":"批次号",
   "MODULES_BATCH_BATCH_STATUS":"批次状态",
@@ -245,6 +248,12 @@
   "MODULES_PROJECTMANAGE_PLEASE_SELECT_ATTRIBUTE":"请选择属性",
   "MODULES_PROJECTMANAGE_EXPORT_SAMPLE":"导出样例",
   "MODULES_PROJECTMANAGE_EXPORT_TEMPLATE":"导出模版",
+  "MODULES_PROJECTMANAGE_RECEIVING_PLATFORM_RETENTION_PERIOD":"遵循接收平台保管期限",
+  "MODULES_PROJECTMANAGE_MODIFY_NAME":"修改名称",
+  "MODULES_PROJECTMANAGE_BLOCK":"数据块",
+  "MODULES_PROJECTMANAGE_NODE":"活动节点",
+  "MODULES_PROJECTMANAGE_ADD_FILE":"添加文件",
+  "MODULES_PROJECTMANAGE_FILE_LIST":"文件列表",
 
 
   "MODULES_SERVICEWATCH_SERVICE_MONITORING":"服务监控",
@@ -261,13 +270,15 @@
   "MODULES_SERVICEWATCH_SERVICE_STOP":"停止",
   "MODULES_SERVICEWATCH_NORMAL_OPERATION":"正常",
   "MODULES_SERVICEWATCH_TASK_START_TIME":"任务开始时间",
-  "MODULES_SERVICEWATCH_PACKET_PROFICIENCY":"数据包熟练",
+  "MODULES_SERVICEWATCH_PACKET_PROFICIENCY":"成功数量",
   "MODULES_SERVICEWATCH_SCHEDULE":"进度",
   "MODULES_SERVICEWATCH_SERVICE_CAN_ONLY_RUN_TAS":"目前每个服务下只能运行一个任务，攻城狮正在全力开发多任务",
   "MODULES_SERVICEWATCH_SHOWS_ONLY_TASKS_THAT_ARE_RUNNING":"此处只显示正在运行的任务，已完成的任务记录请进入",
   "MODULES_SERVICEWATCH_DATA_BATCH":"数据批次",
   "MODULES_SERVICEWATCH_FOR_VIEWING":"查看",
   "MODULES_SERVICEWATCH_NO_TASK":"没有任务",
+  "MODULES_CONTAINER_TYPE_BLOCK":"数据块",
+  "MODULES_CONTAINER_TYPE_NODE":"数据节点",
 
   "MODULES_STATISTICS_DATA_STATISTICS":"数据统计",
 
