update : Batch & dataModule

--- a/app/i18n/cn.json
+++ b/app/i18n/cn.json
@@ -1,8 +1,6 @@
 {
   "PROJECT_MANAGE_NEW_PROJECT":"新建项目",
 
-  "PROJECT_CONNECTMAP_CONNECTION_TOPOLOGY":"连接拓扑",
-
   "MODULES_BATCH_SELECT_DATA_SOURCE":"选择数据源",
   "MODULES_BATCH_BATCH_STATUS":"批次状态",
   "MODULES_BATCH_IN_OPERATION":"运行中",
@@ -83,6 +81,12 @@
   "MODULES_BATCH_RECORD_CODE":"证照编号",
   "MODULES_BATCH_CREATE_DATE":"创建时间",
   "MODULES_BATCH_MODIFY_DATE":"修改时间",
+
+
+  "PROJECT_CONNECTMAP_CONNECTION_TOPOLOGY":"连接拓扑",
+  "PROJECT_CONNECTMAP_NUM":"个",
+  "PROJECT_CONNECTMAP_ARCHIVED_RECORD_QUANTITY":"归档记录数量",
+  "PROJECT_CONNECTMAP_ARCHIVED_RECORD_QUANTITY":"数据被调用次数",
 
 
   "MODULES_DATABASE_DATA_FILTERING":"数据过滤",
