--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -1,8 +1,6 @@
 {
   "PROJECT_MANAGE_NEW_PROJECT":"New Project",
 
-  "PROJECT_CONNECTMAP_CONNECTION_TOPOLOGY":"Connect Topology",
-
   "MODULES_BATCH_SELECT_DATA_SOURCE":"Select data source",
   "MODULES_BATCH_BATCH_STATUS":"Batch Status",
   "MODULES_BATCH_IN_OPERATION":"In operation",
@@ -85,6 +83,12 @@
   "MODULES_BATCH_MODIFY_DATE":"Modify Date",
 
 
+  "PROJECT_CONNECTMAP_CONNECTION_TOPOLOGY":"Connect Topology",
+  "PROJECT_CONNECTMAP_NUM":"",
+  "PROJECT_CONNECTMAP_ARCHIVED_RECORD_QUANTITY":"Archived Record Count",
+  "PROJECT_CONNECTMAP_ARCHIVED_RECORD_QUANTITY":"Data Is Called",
+
+
   "MODULES_DATABASE_DATA_FILTERING":"Data filtering",
   "MODULES_DATABASE_DATA_FORM":"Data form",
   "MODULES_DATABASE_SOURCE_SYSTEM":"Source system",
@@ -126,7 +130,7 @@
   "MODULES_DATABASE_DATA_SOURCE":"Data Source",
   "MODULES_DATABASE_GENERAL_LIBRARY":"General library",
   "MODULES_DATABASE_TRAFFIC":"Traffic",
-  "MODULES_DATABASE_RECORD_QUANTITY":"Record Quantity",
+  "MODULES_DATABASE_RECORD_QUANTITY":"Record Count",
   "MODULES_DATABASE_ARCHIVED_DATA":"Archived Data",
   "MODULES_DATABASE_BROWSE_DATA":"Browse Data",
   "MODULES_DATABASE_DATA_BASE":"Data Base",
