--- a/app/i18n/cn.json
+++ b/app/i18n/cn.json
@@ -81,12 +81,22 @@
   "MODULES_BATCH_RECORD_CODE":"证照编号",
   "MODULES_BATCH_CREATE_DATE":"创建时间",
   "MODULES_BATCH_MODIFY_DATE":"修改时间",
+  "MODULES_BATCH_BUSINESS_END_DATE":"办结时间",
+  "MODULES_BATCH_FILED_DATE":"归档时间",
 
 
   "PROJECT_CONNECTMAP_CONNECTION_TOPOLOGY":"连接拓扑",
   "PROJECT_CONNECTMAP_NUM":"个",
+  "PROJECT_CONNECTMAP_STRIP":"条",
+  "PROJECT_CONNECTMAP_HOME":"家",
   "PROJECT_CONNECTMAP_ARCHIVED_RECORD_QUANTITY":"归档记录数量",
-  "PROJECT_CONNECTMAP_ARCHIVED_RECORD_QUANTITY":"数据被调用次数",
+  "PROJECT_CONNECTMAP_DATA_IS_CALLED":"数据被调用次数",
+  "PROJECT_CONNECTMAP_SIP_CONVERSION_SERVICE":"SIP转换服务",
+  "PROJECT_CONNECTMAP_AIP_CONVERSION_SERVICE":"AIP转换服务",
+  "PROJECT_CONNECTMAP_SEARCH_SERVICE":"搜索服务",
+  "PROJECT_CONNECTMAP_LOG_SERVICE":"日志服务",
+  "PROJECT_CONNECTMAP_CONSUME_SECONDS":"耗时(秒)",
+  "PROJECT_CONNECTMAP_IMPORT_ERMS_COUNT":"导入ERMS的数量",
 
 
   "MODULES_DATABASE_DATA_FILTERING":"数据过滤",
@@ -253,6 +263,7 @@
   "MODULES_PROJECTMANAGE_EXPORT_SAMPLE":"导出样例",
   "MODULES_PROJECTMANAGE_EXPORT_TEMPLATE":"导出模版",
   "MODULES_PROJECTMANAGE_RECEIVING_PLATFORM_RETENTION_PERIOD":"遵循接收平台保管期限",
+  "MODULES_PROJECTMANAGE_FOLLOW_THE_RECEIVING_PLATFORM":"遵循接收平台保留策略",
   "MODULES_PROJECTMANAGE_MODIFY_NAME":"修改名称",
   "MODULES_PROJECTMANAGE_BLOCK":"数据块",
   "MODULES_PROJECTMANAGE_NODE":"活动节点",
@@ -281,10 +292,20 @@
   "MODULES_SERVICEWATCH_DATA_BATCH":"数据批次",
   "MODULES_SERVICEWATCH_FOR_VIEWING":"查看",
   "MODULES_SERVICEWATCH_NO_TASK":"没有任务",
-  "MODULES_CONTAINER_TYPE_BLOCK":"数据块",
-  "MODULES_CONTAINER_TYPE_NODE":"数据节点",
+  "MODULES_SERVICEWATCH_STARTUP_TIME":"启动次数",
+  "MODULES_SERVICEWATCH_LAST_START_TIME":"最后一次启动时间",
+  "MODULES_SERVICEWATCH_IMPORT_ERMS_DATA_PACKET":"导入ERMS数据数量包",
+  "MODULES_SERVICEWATCH_PERCENTAGE_OF_TOTAL":"占总量百分比",
 
   "MODULES_STATISTICS_DATA_STATISTICS":"数据统计",
+  "MODULES_STATISTICS_INVOLVE_BUSINESS_COUNT":"涉及业务数量",
+  "MODULES_STATISTICS_MONTHLY_FILING_DATA":"月度归档数据量",
+  "MODULES_STATISTICS_ALL_UNITS":"所有单位",
+  "MODULES_STATISTICS_ALL_YEAR":"所有年度",
+  "MODULES_STATISTICS_YEAR":"年度",
+  "MODULES_STATISTICS_ALL_SYSTEM":"所有系统",
+  "MODULES_STATISTICS_ALL_MONTH" : "所有月份",
+  "MODULES_STATISTICS_MONTH" : "月份",
 
   "MODULES_USERMANAGE_SYSTEM_SETTINGS":"系统设置",
 
@@ -292,21 +313,8 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  "MODULES_CONTAINER_TYPE_BLOCK":"数据块",
+  "MODULES_CONTAINER_TYPE_NODE":"数据节点",
 
 
 
