--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -81,12 +81,22 @@
   "MODULES_BATCH_RECORD_CODE":"Record Code",
   "MODULES_BATCH_CREATE_DATE":"Create Date",
   "MODULES_BATCH_MODIFY_DATE":"Modify Date",
+  "MODULES_BATCH_BUSINESS_END_DATE":"Business End Date",
+  "MODULES_BATCH_FILED_DATE":"Filed Date",
 
 
   "PROJECT_CONNECTMAP_CONNECTION_TOPOLOGY":"Connect Topology",
   "PROJECT_CONNECTMAP_NUM":"",
+  "PROJECT_CONNECTMAP_STRIP":"",
+  "PROJECT_CONNECTMAP_HOME":"",
   "PROJECT_CONNECTMAP_ARCHIVED_RECORD_QUANTITY":"Archived Record Count",
-  "PROJECT_CONNECTMAP_ARCHIVED_RECORD_QUANTITY":"Data Is Called",
+  "PROJECT_CONNECTMAP_DATA_IS_CALLED":"Data Is Called",
+  "PROJECT_CONNECTMAP_SIP_CONVERSION_SERVICE":"SIP conversion service",
+  "PROJECT_CONNECTMAP_AIP_CONVERSION_SERVICE":"AIP conversion service",
+  "PROJECT_CONNECTMAP_SEARCH_SERVICE":"Search service",
+  "PROJECT_CONNECTMAP_LOG_SERVICE":"Log service",
+  "PROJECT_CONNECTMAP_CONSUME_SECONDS":"Consume(seconds)",
+  "PROJECT_CONNECTMAP_IMPORT_ERMS_COUNT":"Import ERMS Count",
 
 
   "MODULES_DATABASE_DATA_FILTERING":"Data filtering",
@@ -177,7 +187,7 @@
   "MODULES_PROJECTMANAGE_SOURCE_SYSTEM_DATABASE_INFORMATION":"Source system database information",
   "MODULES_PROJECTMANAGE_DATABASE_TYPE":"Database Type",
   "MODULES_PROJECTMANAGE_DATABASE_VERSION":"Database Version",
-  "MODULES_PROJECTMANAGE_DATA_EXTRACTION_METHOD":"Data extraction method",
+  "MODULES_PROJECTMANAGE_DATA_EXTRACTION_METHOD":"Data Extraction Method",
   "MODULES_PROJECTMANAGE_ETL_DATA_EXTRACTION":"ETL Data Extraction",
   "MODULES_PROJECTMANAGE_AIP_INTERFACE":"AIP Interface",
   "MODULES_PROJECTMANAGE_SAVE_CONFIGURATION":"Save Configuration",
@@ -222,12 +232,12 @@
   "MODULES_PROJECTMANAGE_PROJECT_HAS_NOT_YET_DEFINED_STRATEGY":"The project has not yet defined strategy",
   "MODULES_PROJECTMANAGE_IMMEDIATELY_CREATED":"Immediately created",
   "MODULES_PROJECTMANAGE_ARCHIVE_POLICY":"Archive Policy",
-  "MODULES_PROJECTMANAGE_REF_RULES":"Ref rules",
+  "MODULES_PROJECTMANAGE_REF_RULES":"Ref Rules",
   "MODULES_PROJECTMANAGE_SERIAL_NUMBER":"Serial Code",
   "MODULES_PROJECTMANAGE_ELEMENT_TYPE":"Element Type",
   "MODULES_PROJECTMANAGE_STRING":"String",
   "MODULES_PROJECTMANAGE_FIELD":"Field",
-  "MODULES_PROJECTMANAGE_ADD_RULE":"Add rule",
+  "MODULES_PROJECTMANAGE_ADD_RULE":"Add Rule",
   "MODULES_PROJECTMANAGE_EXAMPLE":"Example",
   "MODULES_PROJECTMANAGE_RETENTION_PERIOD":"Retention Period",
   "MODULES_PROJECTMANAGE_RETENTION_STRATEGY":"Retention Strategy",
@@ -253,6 +263,7 @@
   "MODULES_PROJECTMANAGE_EXPORT_SAMPLE":"Export Sample",
   "MODULES_PROJECTMANAGE_EXPORT_TEMPLATE":"Export Template",
   "MODULES_PROJECTMANAGE_RECEIVING_PLATFORM_RETENTION_PERIOD":"Receiving platform retention period",
+  "MODULES_PROJECTMANAGE_FOLLOW_THE_RECEIVING_PLATFORM":"Receiving platform retention strategy",
   "MODULES_PROJECTMANAGE_MODIFY_NAME":"Modify Name",
   "MODULES_PROJECTMANAGE_BLOCK":"Block",
   "MODULES_PROJECTMANAGE_NODE":"Node",
@@ -281,25 +292,22 @@
   "MODULES_SERVICEWATCH_DATA_BATCH":"Data Batch",
   "MODULES_SERVICEWATCH_FOR_VIEWING":"for viewing",
   "MODULES_SERVICEWATCH_NO_TASK":"No task",
+  "MODULES_SERVICEWATCH_STARTUP_TIME":"Startup time",
+  "MODULES_SERVICEWATCH_LAST_START_TIME":"Last start time",
+  "MODULES_SERVICEWATCH_IMPORT_ERMS_DATA_PACKET":"Import ERMS data packet",
+  "MODULES_SERVICEWATCH_PERCENTAGE_OF_TOTAL":"Percentage of total",
 
   "MODULES_STATISTICS_DATA_STATISTICS":"Data Statistics",
+  "MODULES_STATISTICS_INVOLVE_BUSINESS_COUNT":"Involve Business Count",
+  "MODULES_STATISTICS_MONTHLY_FILING_DATA":"Monthly Filing Data",
+  "MODULES_STATISTICS_ALL_UNITS":"All Units",
+  "MODULES_STATISTICS_ALL_YEAR":"All Year",
+  "MODULES_STATISTICS_YEAR":"Year",
+  "MODULES_STATISTICS_ALL_SYSTEM":"All System",
+  "MODULES_STATISTICS_ALL_MONTH":"ALL Month",
+  "MODULES_STATISTICS_MONTH":"Month",
 
   "MODULES_USERMANAGE_SYSTEM_SETTINGS":"System Settings",
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
